--- a/views/add_student.ejs
+++ b/views/add_student.ejs
@@ -9,7 +9,7 @@
 		<%- include('_header') %>
 		<form
 			class="w-50 mx-auto mt-4"
-			action="/students/create-student"
+			action="/students/createStudent"
 			method="post"
 			style="
 				height: 100%;
